log
Fri Apr 22 15:24:45 UTC 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
a6f1935
Fri Apr 22 15:27:37 UTC 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
bd1e25a
Fri Apr 22 15:27:55 UTC 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|8
total_score: 0/70
1b0ea74
Fri Apr 22 15:28:26 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
67507a6
Fri Apr 22 15:34:40 UTC 2022: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
bae2e52
Fri Apr 22 15:47:23 UTC 2022: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
test.c:606:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1: all warnings being treated as errors
Compilation failed
aa26c79
Fri Apr 22 15:52:43 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|6
total_score: 5/70
027ef50
Fri Apr 22 16:00:54 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
fe9f2f5
Fri Apr 22 16:05:01 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|6
total_score: 5/70
9685201
Fri Apr 22 16:07:56 UTC 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
2ade86b
Fri Apr 22 16:08:17 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
9ca3323
Fri Apr 22 16:08:35 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
80cb065
Sat Apr 23 21:16:23 UTC 2022: 
 treemap.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
 tests:  0|0
6386b62
Sat Apr 23 21:17:14 UTC 2022: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
24fbcbb
Sat Apr 23 21:18:58 UTC 2022: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  13|5
total_score: 15/70
6fa6e5c
Sat Apr 23 21:19:31 UTC 2022: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  13|5
total_score: 15/70
414119f
Sat Apr 23 21:19:54 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
0837cd0
Sat Apr 23 21:37:47 UTC 2022: 
 treemap.c | 54 +++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 53 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
27fb9f4
Sat Apr 23 21:42:03 UTC 2022: 
 treemap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  0|0
bbc3fd4
Sat Apr 23 21:42:52 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  20|2
total_score: 45/70
674c596
Mon Apr 25 00:24:47 UTC 2022: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:213:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
3c43eed
Mon Apr 25 00:27:12 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  21|2
total_score: 50/70
6275029
Mon Apr 25 00:29:56 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  21|2
total_score: 50/70
03d68ab
Mon Apr 25 00:39:15 UTC 2022: 
 treemap.c | 21 +++++++++++----------
 1 file changed, 11 insertions(+), 10 deletions(-)
 tests:  21|2
total_score: 50/70
5385421
